@@ -432,8 +432,8 @@ This function transforms a time to the XMPP date time format.
 The meanings of C<$sec>, ..., C<$year> are explained in the perldoc
 of Perl's C<localtime> builtin and have the same value ranges.
 
-C<$tz> has to be either C<"UTC"> or of the form C<[+-]hh:mm>, if it is
-undefined "UTC" will be used.
+C<$tz> has to be either C<"Z"> (for UTC) or of the form C<[+-]hh:mm> (offset
+from UTC), if it is undefined "Z" will be used.
 
 C<$secfrac> are optional and can be the fractions of the second.
 
@@ -443,7 +443,7 @@ See also XEP-0082.
 
 sub to_xmpp_datetime {
    my ($sec, $min, $hour, $mday, $mon, $year, $tz, $secfrac) = @_;
-   my $time = to_xmpp_time ($sec, $min, $hour, (defined $tz ? $tz : 'UTC'), $secfrac);
+   my $time = to_xmpp_time ($sec, $min, $hour, (defined $tz ? $tz : 'Z'), $secfrac);
    sprintf "%04d-%02d-%02dT%s", $year + 1900, $mon + 1, $mday, $time;
 }
 
@@ -461,6 +461,8 @@ documentation for C<to_xmpp_datetime>.
 
 C<$tz> and C<$secfrac> might be undefined.
 
+If C<$tz> is undefined the timezone is to be assumed to be UTC.
+
 If C<$string> contained just a time C<$mday>, C<$mon> and C<$year> will be undefined.
 
 See also XEP-0082.
@@ -469,11 +471,13 @@ See also XEP-0082.
 
 sub from_xmpp_datetime {
    my ($string) = @_;
+
    if ($string !~
-      /^(?:(\d{4})-?(\d{2})-?(\d{2})T)?(\d{2}):(\d{2}):(\d{2})(\.\d{3})?(UTC|[+-]\d{2}:\d{2})?/)
+      /^(?:(\d{4})-?(\d{2})-?(\d{2})T)?(\d{2}):(\d{2}):(\d{2})(\.\d{3})?(Z|[+-]\d{2}:\d{2})?/)
    {
       return ()
    }
+
    ($6, $5, $4,
       ($3 ne '' ? $3        : undef),
       ($2 ne '' ? $2 - 1    : undef),
@@ -485,7 +489,8 @@ sub from_xmpp_datetime {
 =item B<xmpp_datetime_as_timestamp ($string)>
 
 This function takes the same arguments as C<from_xmpp_datetime>, but returns a
-unix timestamp, like C<time ()> would.
+unix timestamp, like C<time ()> would. The return value will be a timestamp
+which will be located in the UTC timezone.
 
 This function requires the L<POSIX> module.
 
@@ -494,8 +499,16 @@ This function requires the L<POSIX> module.
 sub xmpp_datetime_as_timestamp {
    my ($string) = @_;
    require POSIX;
-   my ($s, $m, $h, $md, $mon, $year) = from_xmpp_datetime ($string);
-   POSIX::mktime ($s, $m, $h, $md, $mon, $year)
+   my ($s, $m, $h, $md, $mon, $year, $tz) = from_xmpp_datetime ($string);
+   my $ts = POSIX::mktime ($s, $m, $h, $md, $mon, $year);
+
+   if ($tz =~ /^([+-])(\d{2}):(\d{2})$/) {
+      my ($h, $m) = ($2, $3);
+      if ($1 eq '-') { $h *= -1; $m *= -1 }
+      $ts -= ($h * 60) + $m;
+   }
+
+   $ts
 }
 
 sub dump_twig_xml {
